--- a/valentines-landi/valentines-landi.html
+++ b/valentines-landi/valentines-landi.html
@@ -66,9 +66,9 @@
 </head>
 <body>
     <div id="content">
-        <h2 id="question">Would you date me?</h2>
-        <button id="yesButton">YES</button>
-        <button id="noButton">NO</button>
+        <h2 id="question">Hi JJ! Will you be my Valentine?</h2>
+        <button id="yesButton">OFC LOVE KO IKAW</button>
+        <button id="noButton">ayaw</button>
         <p id="message"></p>
     </div>
 
